--- a/_sass/minima/custom-variables.scss
+++ b/_sass/minima/custom-variables.scss
@@ -2,8 +2,8 @@
 
 // width of the content area
 // can be set as "px" or "%"
-$content-width:    1000px;
-$on-palm:          800px;
-$on-laptop:        1000px;
-$on-medium:        1000px;
-$on-large:         1200px;
+$content-width:    90%;
+$on-palm:          95%;
+$on-laptop:        90%;
+$on-medium:        90%;
+$on-large:         90%;
